feat: initial authentication support

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,9 +11,9 @@
     <h1>TiTilda Music!</h1>
     <p>Welcome to the music application</p>
 
-    <!--/*@thymesVar id="message" type="java.lang.String"*/-->
-    <div th:if="${message}">
-        <p th:text="${message}"></p>
+    <!--/*@thymesVar id="username" type="java.lang.String"*/-->
+    <div th:if="${username}">
+        <p>Welcome back to t̃🎵, </p><p th:text="${username}"></p>
     </div>
 
     <!--/*@thymesVar id="currentTime" type="java.util.Date"*/-->
