--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -81,6 +81,13 @@
             <div class="form-group">
                 <input type="submit" value="Login">
             </div>
+
+            <!--/*@thymesVar id="error" type="java.lang.String"*/-->
+
+            <div th:if="${error}" style="color: red; text-align: center;">
+                <p th:text="${error}">Error</p>
+            </div>
+
         </form>
     </div>
 </body>
