fea: nicer date format

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -42,7 +42,7 @@
             <li th:each="playlist : ${playlists}">
                 <a class="playlist-btn" th:href="'playlist?id=' + ${playlist.id}">
                     <span class="playlist-name" th:text="${playlist.name}">Playlist name</span>
-                    <span class="playlist-date" th:text="${#dates.format(playlist.createdAt, 'yyyy-MM-dd HH:mm')}">2025-01-01 12:00</span>
+                    <span class="playlist-date" th:text="${#dates.format(playlist.createdAt, 'd MMM yyyy, HH:mm')}">2 Jan 2025, 12:00</span>
                 </a>
             </li>
         </ol>
