--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -229,12 +229,12 @@
                 <div class="form-group">
                     <label class="form-label optional-label" for="artwork">Artwork <span
                             class="optional-label">(optional)</span></label>
-                    <input class="form-input" type="file" id="artwork" name="artwork" accept="image/*">
+                    <input class="form-input" type="file" id="artwork" name="artwork" accept="image/jpeg, image/png, image/webp">
                 </div>
 
                 <div class="form-group">
                     <label class="form-label" for="songFile">Song file</label>
-                    <input class="form-input" type="file" id="songFile" name="songFile" accept="audio/*" required>
+                    <input class="form-input" type="file" id="songFile" name="songFile" accept="audio/mpeg, audio/wav, audio/ogg, audio/flac" required>
                 </div>
 
                 <div class="form-group">
