--- a/src/main/resources/templates/song.html
+++ b/src/main/resources/templates/song.html
@@ -35,7 +35,7 @@
         }
 
         .top {
-            margin-top: 150px;
+            margin-top: 24px;
         }
 
         .home-link {
@@ -168,6 +168,9 @@
 </head>
 
 <body>
+    <!-- Include topbar for authenticated users -->
+    <div th:replace="~{fragments/topbar :: topbar}"></div>
+
     <main class="container">
         <div class="top">
             <a class="home-link" href="/home">&lt; Home</a>
