--- a/src/main/resources/templates/fragments/topbar.html
+++ b/src/main/resources/templates/fragments/topbar.html
@@ -171,8 +171,8 @@
                     </div>
 
                     <div class="dropdown-menu">
-                        <a href="/profile" class="dropdown-item">Profile</a>
-                        <div class="dropdown-divider"></div>
+<!--                        <a href="/profile" class="dropdown-item">Profile</a>
+                        <div class="dropdown-divider"></div>-->
                         <form method="POST" action="/auth/logout" class="logout-form">
                             <button type="submit" class="dropdown-item">Logout</button>
                         </form>
