--- a/src/main/resources/templates/fragments/topbar.html
+++ b/src/main/resources/templates/fragments/topbar.html
@@ -172,7 +172,10 @@
 
                     <div class="dropdown-menu">
                         <form method="POST" action="/auth/logout" class="logout-form">
-                            <button type="submit" class="dropdown-item">Logout</button>
+                            <button type="submit" class="dropdown-item">Sign out</button>
+                        </form>
+                        <form method="POST" action="/auth/logout-everywhere" class="logout-form">
+                            <button type="submit" class="dropdown-item">Sign out from all devices</button>
                         </form>
                     </div>
                 </div>
