--- a/src/main/webapp/csr/css/playlist.css
+++ b/src/main/webapp/csr/css/playlist.css
@@ -145,7 +145,6 @@ h2 {
     color: #d0d7de;
 }
 
-/* TODO refactor this css, it's literally a dupe of home.html */
 .create-song-form {
     background: #1f2328;
     border: 1px solid #30363d;
@@ -155,6 +154,14 @@ h2 {
     max-width: 500px;
     margin-left: auto;
     margin-right: auto;
+}
+
+.song-select-form {
+    background: #1f2328;
+    border: 1px solid #30363d;
+    border-radius: 10px;
+    padding: 20px;
+    margin-top: 32px;
 }
 
 .form-group {
