--- a/src/main/webapp/csr/css/songs.css
+++ b/src/main/webapp/csr/css/songs.css
@@ -1,5 +1,9 @@
 .song-top {
     margin-top: 24px;
+    text-align: center;
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .home-link {
@@ -16,6 +20,7 @@
 .song-content {
     max-width: 600px;
     margin: 32px auto;
+    text-align: center;
 }
 
 .artwork-container {
@@ -43,7 +48,7 @@
 }
 
 .audio-player {
-    margin: 24px 0;
+    margin: 24px auto;
     width: 100%;
     max-width: 400px;
 }
@@ -58,7 +63,7 @@
     border: 1px solid #30363d;
     border-radius: 10px;
     padding: 0;
-    margin: 24px 0;
+    margin: 24px auto;
     overflow: hidden;
 }
 
